[Fix] nginx config for statics

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,10 +13,10 @@ server {
     }
 
     location /static/ {
-        alias /home/app/site/static/;
+        alias /home/app/site/web/static/;
     }
 
     location /media/ {
-        alias /home/app/site/media/;
+        alias /home/app/site/web/media/;
     }
 }
