--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ __pycache__
 digit.model
 MNIST_data
 *.png
-media/*.jpg
-media/*.jpeg
-media/*.png
+*/*/media/*.jpg
+*/*/media/*.jpeg
+*/*/media/*.png
