--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: ./web
     command: gunicorn main:app -b 0.0.0.0:8000
+    env_file:
+      - ./.env
     volumes:
       - static_volume:/home/site/web/static
       - media_volume:/home/site/media
