[Upd] media path

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,6 +17,6 @@ server {
     }
 
     location /media/ {
-        alias /home/site/web/media/;
+        alias /home/site/web/static/media/;
     }
 }
