--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./.env
     volumes:
       - static_volume:/home/site/web/static
-      - media_volume:/home/site/media
+      - media_volume:/home/site/web/static/media
     expose:
       - 8000
     depends_on:
@@ -28,7 +28,7 @@ services:
     build: ./nginx
     volumes:
       - static_volume:/home/site/web/static
-      - media_volume:/home/site/media
+      - media_volume:/home/site/web/static/media
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.groot.entrypoints=http"
