[Upd] add new class names

--- a/groot/settings.json
+++ b/groot/settings.json
@@ -2,11 +2,110 @@
     "img_height": 128,
     "img_width": 128,
     "class_names": [
+        "alpine sea holly",
+        "anthurium",
+        "artichoke",
+        "azalea",
+        "balloon flower",
+        "barberton daisy",
+        "bee balm",
+        "bird of paradise",
+        "bishop of llandaff",
+        "blackberry lily",
+        "black-eyed susan",
+        "blanket flower",
+        "bolero deep blue",
+        "bougainvillea",
+        "bromelia",
+        "buttercup",
+        "californian poppy",
+        "camellia",
+        "canna lily",
+        "canterbury bells",
+        "cape flower",
+        "carnation",
+        "cautleya spicata",
+        "clematis",
+        "colt's foot",
+        "columbine",
+        "common dandelion",
+        "common tulip",
+        "corn poppy",
+        "cosmos",
+        "cyclamen ",
+        "daffodil",
         "daisy",
-        "dandelion",
-        "roses",
-        "sunflowers",
-        "tulips"
+        "desert-rose",
+        "fire lily",
+        "foxglove",
+        "frangipani",
+        "fritillary",
+        "garden phlox",
+        "gaura",
+        "gazania",
+        "geranium",
+        "giant white arum lily",
+        "globe-flower",
+        "globe thistle",
+        "grape hyacinth",
+        "great masterwort",
+        "hard-leaved pocket orchid",
+        "hibiscus",
+        "hippeastrum ",
+        "iris",
+        "japanese anemone",
+        "king protea",
+        "lenten rose",
+        "lilac hibiscus",
+        "lotus",
+        "love in the mist",
+        "magnolia",
+        "mallow",
+        "marigold",
+        "mexican petunia",
+        "monkshood",
+        "moon orchid",
+        "morning glory",
+        "orange dahlia",
+        "osteospermum",
+        "passion flower",
+        "peruvian lily",
+        "petunia",
+        "pincushion flower",
+        "pink primrose",
+        "pink quill",
+        "pink-yellow dahlia",
+        "poinsettia",
+        "primula",
+        "prince of wales feathers",
+        "purple coneflower",
+        "red ginger",
+        "rose",
+        "ruby-lipped cattleya",
+        "siam tulip",
+        "silverbush",
+        "snapdragon",
+        "spear thistle",
+        "spring crocus",
+        "stemless gentian",
+        "sunflower",
+        "sweet pea",
+        "sweet william",
+        "sword lily",
+        "thorn apple",
+        "tiger lily",
+        "toad lily",
+        "tree mallow",
+        "tree poppy",
+        "trumpet creeper",
+        "wallflower",
+        "watercress",
+        "water lily",
+        "wild geranium",
+        "wild pansy",
+        "wild rose",
+        "windflower",
+        "yellow iris"
     ],
     "model_name": "Groot",
     "db_host": "redis",
