--- a/groot/requirements.txt
+++ b/groot/requirements.txt
@@ -4,24 +4,22 @@ cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
 cycler==0.10.0
-flatbuffers==1.12
 gast==0.3.3
-google-auth==1.25.0
+google-auth==1.27.0
 google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
-grpcio==1.32.0
+grpcio==1.35.0
 h5py==2.10.0
 idna==2.10
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
-Markdown==3.3.3
+Markdown==3.3.4
 matplotlib==3.3.4
-numpy==1.19.5
+numpy==1.18.5
 oauthlib==3.1.0
-opencv-python==4.5.1.48
 opt-einsum==3.3.0
 Pillow==8.1.0
-protobuf==3.14.0
+protobuf==3.15.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
@@ -29,14 +27,14 @@ python-dateutil==2.8.1
 redis==3.5.3
 requests==2.25.1
 requests-oauthlib==1.3.0
-rsa==4.7
+rsa==4.7.2
+scipy==1.4.1
 six==1.15.0
 tensorboard==2.4.1
 tensorboard-plugin-wit==1.8.0
-tensorflow==2.4.1
-tensorflow-estimator==2.4.0
+tensorflow==2.3.0
+tensorflow-estimator==2.3.0
 termcolor==1.1.0
-typing-extensions==3.7.4.3
 urllib3==1.26.3
 Werkzeug==1.0.1
 wrapt==1.12.1
