[Fix] family names

--- a/groot/settings.json
+++ b/groot/settings.json
@@ -82,7 +82,12 @@
         "red ginger",
         "rose",
         "ruby-lipped cattleya",
-        "data.txt",
+        "siam tulip",
+        "silverbush",
+        "snapdragon",
+        "spear thistle",
+        "spring crocus",
+        "stemless gentian",
         "sunflower",
         "sweet pea",
         "sweet william",
